# prj_ve_facil

src/prj_ve_facil/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
src/prj_ve_facil/file_analise/: apps.py  forms.py  models.py  urls.py  views.py
src/prj_ve_facil/file_analise/migrations/: 0001_initial.py  0002_alter_arquivos_nom_arquivo.py  0003_alter_arquivos_arquivo_alter_arquivos_nom_arquivo.py  0004_alter_arquivos_arquivo.py  0005_alter_arquivos_arquivo.py
src/prj_ve_facil/file_analise/static/: chart.js  config.js
src/prj_ve_facil/media/csv/: ATA_DE_RESULTADOS_FINAIS__Conselho_de_Classe_.csv  B4-011_Chuva_Diaria_Serie_20230416_180739.csv  B4-011_Chuva_Diaria_Serie_20230416_180739_modificado.csv  Gapminder.csv  ocorrencia_2010_2020_del_row.csv  ocorrencia_2010_2020_formatado.csv
src/prj_ve_facil/prj_ve_facil/: asgi.py  settings.py  urls.py  wsgi.py
src/prj_ve_facil/templates/: analise.html  base.html  index.html
