[project]
name = "prj-ve-facil"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Ponte Cassemiro",email = "rafael_ponte1b@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
